<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Princeton Arcade</string>
    
    <string name="welcometxt">Welcome to Princeton Arcade!\nPlease log in below:</string>
    <string name="netidlabel">netid: </string>
    <string name="passlabel">password: </string>
    <string name="loginlabel">Login</string>
    <string name="loggedintxt">Welcome to Princeton Arcade!</string>
    <string name="playgame">Start Single Player!</string>
    <string name="registerlabel">Register</string>
    <string name="loginstatus"/>
    <string name="confirmlabel">confirm: </string>
    <string name="emaillabel">email: </string>
    <string name="registerstatus"/>
<string name="mode_ready">Snake\nPress Any Direction To Play</string>
  <string name="mode_pause">Paused\nPress Any Direction To Resume</string>
  <string name="mode_lose_prefix">Game Over!\nScore: </string>
  <string name="mode_lose_suffix">\nPress Any Direction To Play</string>

    <string name="snake_layout_text_text"></string>

    <string name="lobbytext"></string>
</resources>